--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Random Color Generator</h1>
+    <button id="refresh-button" type="button">Refresh</button>
     <div class="container"></div>
     <script src="index.js"></script>
 </body>
